Some minor tweaks

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
    <!--   <div class="form-group">-->
         <!--<input id="query" placeholder="Enter gif name" value="batman">-->
         <!--<button id="submit">submit</button>-->
-          GIF:<input id="query" value="batman"></input>
-          <br/>
-          <button id="submit">submit</button>
+          <input id="query" placeholder="Enter the gif" value=""></input>
+          <!--<br/>-->
+          <button id="submit">SUBMIT</button>
       
   </body>
 </html>
